[package]
name = "grin-vanity"
version = "0.1.1"
description = "A cli vanity address generator for Grin"
edition = "2021"
authors = ["Makis Christou <makis_christou@protonmail.com>, edit by CircusDad"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
ed25519-dalek = "2.0.0"
grin_core = "5.3.1"
grin_keychain = "5.3.1"
grin_util = "5.3.1"
grin_wallet = "5.3.1"
grin_wallet_libwallet = "5.3.1"
rand = "0.8.5"
